# dental-care

./: .env.example  .gitignore  Dockerfile  README.md  dental_hospital.db  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py
alembic/versions/: 28bb6073e58b_create_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: jwt.py  permissions.py
app/models/: __init__.py  admin_group.py  appointment.py  audit_log.py  billing.py  case.py  consultant.py  consultant_note.py  hospital.py  patient.py  post_op.py  pre_op.py  refresh_token.py  treatment_plan.py  treatment_sitting.py  user.py
app/repositories/: admin_group_repository.py  appointment_repository.py  audit_log_repository.py  base.py  billing_repository.py  case_repository.py  consultant_note_repository.py  consultant_repository.py  hospital_repository.py  patient_repository.py  post_op_repository.py  pre_op_repository.py  refresh_token_repository.py  treatment_plan_repository.py  treatment_sitting_repository.py  user_repository.py
app/routers/: admin_groups.py  appointments.py  auth.py  billings.py  cases.py  consultant_notes.py  consultants.py  dashboards.py  doctors.py  hospitals.py  patients.py  post_ops.py  pre_ops.py  treatment_plans.py  treatment_sittings.py  whatsapp_messaging.py
app/schemas/: admin_group.py  appointment.py  auth.py  billing.py  case.py  common.py  consultant.py  consultant_note.py  hospital.py  user.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_auth.py  test_rbac.py
(+52 files in other folders)
